Saving changes to get-crimes-2018

--- a/get-crimes-2018.ipynb
+++ b/get-crimes-2018.ipynb
@@ -2,29 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sodapy\n",
-      "  Downloading https://files.pythonhosted.org/packages/25/63/1915146aa7c453289cdfe181df30d4009ef3518a87b5c873269582c20c7b/sodapy-1.5.0-py2.py3-none-any.whl\n",
-      "Collecting requests>=2.20.0 (from sodapy)\n",
-      "  Downloading https://files.pythonhosted.org/packages/7d/e3/20f3d364d6c8e5d2353c72a67778eb189176f08e873c9900e10c0287b84b/requests-2.21.0-py2.py3-none-any.whl (57kB)\n",
-      "Requirement already satisfied: future>=0.17.1 in c:\\users\\david tabor\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from sodapy) (0.17.1)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\david tabor\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2.7)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\david tabor\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (3.0.4)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\david tabor\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (1.23)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\david tabor\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2018.11.29)\n",
-      "Installing collected packages: requests, sodapy\n",
-      "  Found existing installation: requests 2.19.1\n",
-      "    Uninstalling requests-2.19.1:\n",
-      "      Successfully uninstalled requests-2.19.1\n",
-      "Successfully installed requests-2.21.0 sodapy-1.5.0\n"
+      "Requirement already satisfied: sodapy in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (1.5.0)\n",
+      "Requirement already satisfied: future>=0.17.1 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from sodapy) (0.17.1)\n",
+      "Requirement already satisfied: requests>=2.20.0 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from sodapy) (2.21.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2018.8.24)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (1.23)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2.7)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (3.0.4)\n"
      ]
     },
     {
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +42,13 @@
     "import requests\n",
     "import pandas as pd\n",
     "from pprint import pprint\n",
-    "from sodapy import Socrata\n"
+    "from sodapy import Socrata\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +274,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,20 +292,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David Tabor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3140: SettingWithCopyWarning: \n",
+      "C:\\Users\\Laura Schmidt\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3140: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  self[k1] = value[k2]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_number</th>\n",
+       "      <th>description</th>\n",
+       "      <th>primary_type</th>\n",
+       "      <th>fbi_code</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>domestic</th>\n",
+       "      <th>arrest</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JB140548</td>\n",
+       "      <td>FIRST DEGREE MURDER</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>01A</td>\n",
+       "      <td>41.68073915</td>\n",
+       "      <td>-87.645661144</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2018-02-04</td>\n",
+       "      <td>01:36:00.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JB108189</td>\n",
+       "      <td>AUTOMOBILE</td>\n",
+       "      <td>MOTOR VEHICLE THEFT</td>\n",
+       "      <td>07</td>\n",
+       "      <td>41.99456734</td>\n",
+       "      <td>-87.659016317</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2018-01-08</td>\n",
+       "      <td>06:50:00.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JB108139</td>\n",
+       "      <td>AUTOMOBILE</td>\n",
+       "      <td>MOTOR VEHICLE THEFT</td>\n",
+       "      <td>07</td>\n",
+       "      <td>42.01220081</td>\n",
+       "      <td>-87.69390481</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2018-01-07</td>\n",
+       "      <td>21:00:00.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JB108319</td>\n",
+       "      <td>RETAIL THEFT</td>\n",
+       "      <td>THEFT</td>\n",
+       "      <td>06</td>\n",
+       "      <td>41.890384236</td>\n",
+       "      <td>-87.624109917</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>18:10:00.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JB108166</td>\n",
+       "      <td>ATTEMPT FORCIBLE ENTRY</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>05</td>\n",
+       "      <td>41.71716022</td>\n",
+       "      <td>-87.643093654</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2018-01-08</td>\n",
+       "      <td>04:09:00.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  case_number             description         primary_type fbi_code  \\\n",
+       "0    JB140548     FIRST DEGREE MURDER             HOMICIDE      01A   \n",
+       "1    JB108189              AUTOMOBILE  MOTOR VEHICLE THEFT       07   \n",
+       "2    JB108139              AUTOMOBILE  MOTOR VEHICLE THEFT       07   \n",
+       "3    JB108319            RETAIL THEFT                THEFT       06   \n",
+       "4    JB108166  ATTEMPT FORCIBLE ENTRY             BURGLARY       05   \n",
+       "\n",
+       "       latitude      longitude  domestic  arrest        date          time  \\\n",
+       "0   41.68073915  -87.645661144     False   False  2018-02-04  01:36:00.000   \n",
+       "1   41.99456734  -87.659016317     False   False  2018-01-08  06:50:00.000   \n",
+       "2   42.01220081   -87.69390481     False   False  2018-01-07  21:00:00.000   \n",
+       "3  41.890384236  -87.624109917     False   False  2018-01-05  18:10:00.000   \n",
+       "4   41.71716022  -87.643093654     False   False  2018-01-08  04:09:00.000   \n",
+       "\n",
+       "   month  year  day  \n",
+       "0      2  2018    4  \n",
+       "1      1  2018    8  \n",
+       "2      1  2018    7  \n",
+       "3      1  2018    5  \n",
+       "4      1  2018    8  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -327,16 +467,21 @@
     "df = df.rename(columns = {'date_parsed': 'date', 'time_parsed': 'time'})\n",
     "df.head()\n",
     "\n",
-    "#Save output to csv\n",
-    "df.to_csv('2018_crime.csv', index=False)"
+    "df['month'] = pd.DatetimeIndex(df['date']).month\n",
+    "df['year'] = pd.DatetimeIndex(df['date']).year\n",
+    "df['day'] = pd.DatetimeIndex(df['date']).day\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Save output to csv\n",
+    "df.to_csv('2018_crime.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
