Push changes to get-crimes-add loc columns

--- a/get-crimes-2018.ipynb
+++ b/get-crimes-2018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,10 +12,10 @@
       "Requirement already satisfied: sodapy in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (1.5.0)\n",
       "Requirement already satisfied: future>=0.17.1 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from sodapy) (0.17.1)\n",
       "Requirement already satisfied: requests>=2.20.0 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from sodapy) (2.21.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (3.0.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2018.8.24)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (1.23)\n",
       "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (2.7)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (3.0.4)\n"
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in c:\\users\\laura schmidt\\anaconda3\\lib\\site-packages (from requests>=2.20.0->sodapy) (1.23)\n"
      ]
     },
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,53 +130,29 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>False</td>\n",
-       "      <td>2433</td>\n",
-       "      <td>011XX W GRANVILLE AVE</td>\n",
-       "      <td>JB108189</td>\n",
-       "      <td>77</td>\n",
-       "      <td>2018-01-08T06:50:00.000</td>\n",
-       "      <td>AUTOMOBILE</td>\n",
-       "      <td>024</td>\n",
-       "      <td>False</td>\n",
-       "      <td>07</td>\n",
+       "      <td>2234</td>\n",
+       "      <td>011XX W 111TH ST</td>\n",
+       "      <td>JB107989</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2018-01-07T21:01:00.000</td>\n",
+       "      <td>DOMESTIC BATTERY SIMPLE</td>\n",
+       "      <td>022</td>\n",
+       "      <td>True</td>\n",
+       "      <td>08B</td>\n",
        "      <td>...</td>\n",
-       "      <td>41.99456734</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [-87.65901631...</td>\n",
-       "      <td>STREET</td>\n",
-       "      <td>-87.659016317</td>\n",
-       "      <td>MOTOR VEHICLE THEFT</td>\n",
+       "      <td>41.692258729</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-87.65053259...</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>-87.65053259</td>\n",
+       "      <td>BATTERY</td>\n",
        "      <td>2018-05-04T15:51:04.000</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1167554</td>\n",
-       "      <td>1941332</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1170736</td>\n",
+       "      <td>1831190</td>\n",
        "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>2411</td>\n",
-       "      <td>025XX W TOUHY AVE</td>\n",
-       "      <td>JB108139</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018-01-07T21:00:00.000</td>\n",
-       "      <td>AUTOMOBILE</td>\n",
-       "      <td>024</td>\n",
-       "      <td>False</td>\n",
-       "      <td>07</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42.01220081</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [-87.69390481...</td>\n",
-       "      <td>STREET</td>\n",
-       "      <td>-87.69390481</td>\n",
-       "      <td>MOTOR VEHICLE THEFT</td>\n",
-       "      <td>2018-05-04T15:51:04.000</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1158022</td>\n",
-       "      <td>1947685</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>1834</td>\n",
        "      <td>004XX N MICHIGAN AVE</td>\n",
@@ -200,27 +176,51 @@
        "      <td>2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>1014</td>\n",
+       "      <td>016XX S HARDING AVE</td>\n",
+       "      <td>JB108320</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2018-01-08T08:59:00.000</td>\n",
+       "      <td>MANU/DELIVER: HEROIN (WHITE)</td>\n",
+       "      <td>010</td>\n",
+       "      <td>False</td>\n",
+       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41.858283017</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-87.72369127...</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>-87.723691271</td>\n",
+       "      <td>NARCOTICS</td>\n",
+       "      <td>2018-05-04T15:51:04.000</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1150326</td>\n",
+       "      <td>1891538</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>False</td>\n",
-       "      <td>2223</td>\n",
-       "      <td>097XX S HALSTED ST</td>\n",
-       "      <td>JB108166</td>\n",
-       "      <td>73</td>\n",
-       "      <td>2018-01-08T04:09:00.000</td>\n",
-       "      <td>ATTEMPT FORCIBLE ENTRY</td>\n",
-       "      <td>022</td>\n",
-       "      <td>False</td>\n",
-       "      <td>05</td>\n",
+       "      <td>0222</td>\n",
+       "      <td>047XX S LAKE PARK AVE</td>\n",
+       "      <td>JB108379</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2018-01-08T10:45:00.000</td>\n",
+       "      <td>HARASSMENT BY TELEPHONE</td>\n",
+       "      <td>002</td>\n",
+       "      <td>True</td>\n",
+       "      <td>26</td>\n",
        "      <td>...</td>\n",
-       "      <td>41.71716022</td>\n",
-       "      <td>{'type': 'Point', 'coordinates': [-87.64309365...</td>\n",
-       "      <td>RESTAURANT</td>\n",
-       "      <td>-87.643093654</td>\n",
-       "      <td>BURGLARY</td>\n",
+       "      <td>41.809297059</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-87.59196702...</td>\n",
+       "      <td>APARTMENT</td>\n",
+       "      <td>-87.591967028</td>\n",
+       "      <td>OTHER OFFENSE</td>\n",
        "      <td>2018-05-04T15:51:04.000</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1172695</td>\n",
-       "      <td>1840280</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1186364</td>\n",
+       "      <td>1873970</td>\n",
        "      <td>2018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -231,50 +231,50 @@
       "text/plain": [
        "   arrest  beat                  block case_number community_area  \\\n",
        "0   False  0524    117XX S SANGAMON ST    JB140548             53   \n",
-       "1   False  2433  011XX W GRANVILLE AVE    JB108189             77   \n",
-       "2   False  2411      025XX W TOUHY AVE    JB108139              2   \n",
-       "3   False  1834   004XX N MICHIGAN AVE    JB108319              8   \n",
-       "4   False  2223     097XX S HALSTED ST    JB108166             73   \n",
+       "1   False  2234       011XX W 111TH ST    JB107989             75   \n",
+       "2   False  1834   004XX N MICHIGAN AVE    JB108319              8   \n",
+       "3    True  1014    016XX S HARDING AVE    JB108320             29   \n",
+       "4   False  0222  047XX S LAKE PARK AVE    JB108379             39   \n",
        "\n",
-       "                      date             description district  domestic  \\\n",
-       "0  2018-02-04T01:36:00.000     FIRST DEGREE MURDER      005     False   \n",
-       "1  2018-01-08T06:50:00.000              AUTOMOBILE      024     False   \n",
-       "2  2018-01-07T21:00:00.000              AUTOMOBILE      024     False   \n",
-       "3  2018-01-05T18:10:00.000            RETAIL THEFT      018     False   \n",
-       "4  2018-01-08T04:09:00.000  ATTEMPT FORCIBLE ENTRY      022     False   \n",
+       "                      date                   description district  domestic  \\\n",
+       "0  2018-02-04T01:36:00.000           FIRST DEGREE MURDER      005     False   \n",
+       "1  2018-01-07T21:01:00.000       DOMESTIC BATTERY SIMPLE      022      True   \n",
+       "2  2018-01-05T18:10:00.000                  RETAIL THEFT      018     False   \n",
+       "3  2018-01-08T08:59:00.000  MANU/DELIVER: HEROIN (WHITE)      010     False   \n",
+       "4  2018-01-08T10:45:00.000       HARASSMENT BY TELEPHONE      002      True   \n",
        "\n",
        "  fbi_code  ...       latitude  \\\n",
        "0      01A  ...    41.68073915   \n",
-       "1       07  ...    41.99456734   \n",
-       "2       07  ...    42.01220081   \n",
-       "3       06  ...   41.890384236   \n",
-       "4       05  ...    41.71716022   \n",
+       "1      08B  ...   41.692258729   \n",
+       "2       06  ...   41.890384236   \n",
+       "3       18  ...   41.858283017   \n",
+       "4       26  ...   41.809297059   \n",
        "\n",
        "                                            location location_description  \\\n",
        "0  {'type': 'Point', 'coordinates': [-87.64566114...               STREET   \n",
-       "1  {'type': 'Point', 'coordinates': [-87.65901631...               STREET   \n",
-       "2  {'type': 'Point', 'coordinates': [-87.69390481...               STREET   \n",
-       "3  {'type': 'Point', 'coordinates': [-87.62410991...     DEPARTMENT STORE   \n",
-       "4  {'type': 'Point', 'coordinates': [-87.64309365...           RESTAURANT   \n",
+       "1  {'type': 'Point', 'coordinates': [-87.65053259...            RESIDENCE   \n",
+       "2  {'type': 'Point', 'coordinates': [-87.62410991...     DEPARTMENT STORE   \n",
+       "3  {'type': 'Point', 'coordinates': [-87.72369127...            RESIDENCE   \n",
+       "4  {'type': 'Point', 'coordinates': [-87.59196702...            APARTMENT   \n",
        "\n",
-       "       longitude         primary_type               updated_on ward  \\\n",
-       "0  -87.645661144             HOMICIDE  2018-02-11T15:57:41.000   34   \n",
-       "1  -87.659016317  MOTOR VEHICLE THEFT  2018-05-04T15:51:04.000   48   \n",
-       "2   -87.69390481  MOTOR VEHICLE THEFT  2018-05-04T15:51:04.000   50   \n",
-       "3  -87.624109917                THEFT  2018-05-04T15:51:04.000   42   \n",
-       "4  -87.643093654             BURGLARY  2018-05-04T15:51:04.000   21   \n",
+       "       longitude   primary_type               updated_on ward x_coordinate  \\\n",
+       "0  -87.645661144       HOMICIDE  2018-02-11T15:57:41.000   34      1172100   \n",
+       "1   -87.65053259        BATTERY  2018-05-04T15:51:04.000   34      1170736   \n",
+       "2  -87.624109917          THEFT  2018-05-04T15:51:04.000   42      1177357   \n",
+       "3  -87.723691271      NARCOTICS  2018-05-04T15:51:04.000   24      1150326   \n",
+       "4  -87.591967028  OTHER OFFENSE  2018-05-04T15:51:04.000    4      1186364   \n",
        "\n",
-       "  x_coordinate y_coordinate  year  \n",
-       "0      1172100      1827003  2018  \n",
-       "1      1167554      1941332  2018  \n",
-       "2      1158022      1947685  2018  \n",
-       "3      1177357      1903444  2018  \n",
-       "4      1172695      1840280  2018  \n",
+       "  y_coordinate  year  \n",
+       "0      1827003  2018  \n",
+       "1      1831190  2018  \n",
+       "2      1903444  2018  \n",
+       "3      1891538  2018  \n",
+       "4      1873970  2018  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,174 +292,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Laura Schmidt\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3140: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self[k1] = value[k2]\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>case_number</th>\n",
-       "      <th>description</th>\n",
-       "      <th>primary_type</th>\n",
-       "      <th>fbi_code</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>domestic</th>\n",
-       "      <th>arrest</th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>month</th>\n",
-       "      <th>year</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>JB140548</td>\n",
-       "      <td>FIRST DEGREE MURDER</td>\n",
-       "      <td>HOMICIDE</td>\n",
-       "      <td>01A</td>\n",
-       "      <td>41.68073915</td>\n",
-       "      <td>-87.645661144</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-02-04</td>\n",
-       "      <td>01:36:00.000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>JB108189</td>\n",
-       "      <td>AUTOMOBILE</td>\n",
-       "      <td>MOTOR VEHICLE THEFT</td>\n",
-       "      <td>07</td>\n",
-       "      <td>41.99456734</td>\n",
-       "      <td>-87.659016317</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-08</td>\n",
-       "      <td>06:50:00.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>JB108139</td>\n",
-       "      <td>AUTOMOBILE</td>\n",
-       "      <td>MOTOR VEHICLE THEFT</td>\n",
-       "      <td>07</td>\n",
-       "      <td>42.01220081</td>\n",
-       "      <td>-87.69390481</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-07</td>\n",
-       "      <td>21:00:00.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>JB108319</td>\n",
-       "      <td>RETAIL THEFT</td>\n",
-       "      <td>THEFT</td>\n",
-       "      <td>06</td>\n",
-       "      <td>41.890384236</td>\n",
-       "      <td>-87.624109917</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-05</td>\n",
-       "      <td>18:10:00.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>JB108166</td>\n",
-       "      <td>ATTEMPT FORCIBLE ENTRY</td>\n",
-       "      <td>BURGLARY</td>\n",
-       "      <td>05</td>\n",
-       "      <td>41.71716022</td>\n",
-       "      <td>-87.643093654</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2018-01-08</td>\n",
-       "      <td>04:09:00.000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  case_number             description         primary_type fbi_code  \\\n",
-       "0    JB140548     FIRST DEGREE MURDER             HOMICIDE      01A   \n",
-       "1    JB108189              AUTOMOBILE  MOTOR VEHICLE THEFT       07   \n",
-       "2    JB108139              AUTOMOBILE  MOTOR VEHICLE THEFT       07   \n",
-       "3    JB108319            RETAIL THEFT                THEFT       06   \n",
-       "4    JB108166  ATTEMPT FORCIBLE ENTRY             BURGLARY       05   \n",
-       "\n",
-       "       latitude      longitude  domestic  arrest        date          time  \\\n",
-       "0   41.68073915  -87.645661144     False   False  2018-02-04  01:36:00.000   \n",
-       "1   41.99456734  -87.659016317     False   False  2018-01-08  06:50:00.000   \n",
-       "2   42.01220081   -87.69390481     False   False  2018-01-07  21:00:00.000   \n",
-       "3  41.890384236  -87.624109917     False   False  2018-01-05  18:10:00.000   \n",
-       "4   41.71716022  -87.643093654     False   False  2018-01-08  04:09:00.000   \n",
-       "\n",
-       "   month  year  day  \n",
-       "0      2  2018    4  \n",
-       "1      1  2018    8  \n",
-       "2      1  2018    7  \n",
-       "3      1  2018    5  \n",
-       "4      1  2018    8  "
+       "260400"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract useful rows into 'df' which will be saved to csv after munging\n",
-    "df = results_df[['case_number', 'date', 'year', 'description', 'primary_type', \n",
+    "df = results_df[['case_number', 'beat', 'community_area', 'ward', 'date', 'year', 'description', 'primary_type', \n",
     "                 'fbi_code', 'latitude', 'longitude', 'domestic', 'arrest']]\n",
+    "\n",
+    "df = df.dropna()\n",
     "\n",
     "# Parse datetime into date and time.\n",
     "df[['date_parsed', 'time_parsed']] = df['date'].str.split('T', expand=True)\n",
@@ -470,7 +322,10 @@
     "df['month'] = pd.DatetimeIndex(df['date']).month\n",
     "df['year'] = pd.DatetimeIndex(df['date']).year\n",
     "df['day'] = pd.DatetimeIndex(df['date']).day\n",
-    "df.head()"
+    "df['hour'] = pd.DatetimeIndex(df['time']).hour\n",
+    "df.head()\n",
+    "\n",
+    "len(df)"
    ]
   },
   {
